salesforce/objects/AI_Search_Export_Error__c.object
<CustomObject>
    <label>AI Search Export Error</label>
    <pluralLabel>AI Search Export Errors</pluralLabel>
    <nameField>
        <label>Error Number</label>
        <type>AutoNumber</type>
        <displayFormat>ERR-{00000}</displayFormat>
    </nameField>
    <sharingModel>Private</sharingModel>
    
    <fields>
        <fullName>Job_Id__c</fullName>
        <label>Job ID</label>
        <type>Text</type>
        <length>18</length>
    </fields>
    
    <fields>
        <fullName>Object_Type__c</fullName>
        <label>Object Type</label>
        <type>Text</type>
        <length>80</length>
    </fields>
    
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <type>LongTextArea</type>
        <length>32768</length>
    </fields>
    
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <label>Stack Trace</label>
        <type>LongTextArea</type>
        <length>32768</length>
    </fields>
    
    <fields>
        <fullName>Record_Count__c</fullName>
        <label>Record Count</label>
        <type>Number</type>
        <precision>6</precision>
        <scale>0</scale>
    </fields>
    
    <fields>
        <fullName>Timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
</CustomObject>